# meshcore-bbs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.unraid-dev.yml  docker-compose.unraid.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
config/: config.example.yaml
deploy/: meshcore-bbs.service  unraid-template.xml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  OPERATIONS.md  PYMC_MIGRATION.md  USER_GUIDE.md
scripts/: backup_db.sh  configure_radio.py  inspect_db.sh  seed_dev_db.py
src/bbs/: __init__.py  __main__.py  commands.py  config.py  dashboard.py  db.py  dispatcher.py  format.py  health.py  health_state.py  log.py  models.py  names.py  onboarding.py  outbound.py  rate_limit.py  scheduler.py
src/bbs/services/: __init__.py  admin.py  boards.py  mail.py  news.py  weather.py
src/bbs/static/: dashboard.html
src/bbs/transport/: __init__.py  base.py  meshcore.py  mock.py
tests/: conftest.py  test_commands.py  test_config.py  test_dashboard.py  test_dispatcher.py  test_format.py  test_health.py  test_mail.py  test_mail_activity.py  test_meshcore_path.py  test_news.py  test_onboarding.py  test_outbound.py  test_rate_limit.py  test_scheduler.py  test_transport_path.py  test_transport_resilience.py  test_weather.py
