[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-bbs"
version = "0.6.1"
description = "A bulletin board system reachable over MeshCore mesh DMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "MeshCore BBS contributors" }]
dependencies = [
    "meshcore==2.3.7",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.scripts]
meshcore-bbs = "bbs.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bbs = ["static/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
